[package]
name = "stuart_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/w-henderson/Stuart"
repository = "https://github.com/w-henderson/Stuart"
description = "A Blazingly-Fast Static Site Generator."
keywords = ["ssg"]
categories = ["template-engine", "web-programming"]
readme = "../README.md"

[dependencies]
humphrey_json = "^0.2.0"
pulldown-cmark = "^0.9.2"
lazy_static = "^1.4.0"
dateparser = "0.1.7"
chrono = "^0.4"

[lib]
doctest = false