[package]
name = "stuart_core"
version = "0.2.7"
edition = "2021"
license = "MIT"
homepage = "https://github.com/w-henderson/Stuart"
repository = "https://github.com/w-henderson/Stuart"
description = "A Blazingly-Fast Static Site Generator."
keywords = ["ssg"]
categories = ["template-engine", "web-programming"]
readme = "../README.md"

[dependencies]
humphrey_json = { version = "^0.2.0", default-features = false }
pulldown-cmark = { version = "^0.9.2", default-features = false }
lazy_static = "^1.4.0"

dateparser = { version = "0.1.7", optional = true }
chrono = { version = "^0.4", optional = true }

[features]
default = ["date"]
date = ["chrono", "dateparser"]

[lib]
doctest = false
