[package]
name = "stuart"
version = "0.1.0"
edition = "2021"

[dependencies]
humphrey_json = "^0.2.0"
pulldown-cmark = "^0.9.2"
lazy_static = "^1.4.0"
once_cell = "^1.13.1"
dateparser = "0.1.7"
chrono = "^0.4"
termcolor = "^1.1.0"

# TOML parsing
toml = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"

# Argument parsing
clap = "^3.2"