[package]
name = "stuart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stuart_core = { path = "../stuart-core" }

clap = "^3.2"
toml = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
termcolor = "^1.1.0"
once_cell = "^1.13.1"
humphrey = "^0.6.4"
notify = "^4.0.17"