[package]
name = "stuart"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/w-henderson/Stuart"
repository = "https://github.com/w-henderson/Stuart"
description = "A Blazingly-Fast Static Site Generator."
keywords = ["ssg", "cli"]
categories = ["template-engine", "web-programming", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "stuart"
path = "src/main.rs"

[dependencies]
stuart_core = { version = "^0.1.1", path = "../stuart-core" }

clap = "^3.2"
toml = "^0.5"
serde = "^1.0"
serde_derive = "^1.0"
termcolor = "^1.1.0"
once_cell = "^1.13.1"
include_dir = "^0.7.2"
humphrey = "^0.6.4"
humphrey_ws = "^0.5.0"
notify = "^4.0.17"
libloading = "^0.7.3"